[package]
name = "cuda-election"
version = "0.1.0"
edition = "2021"
description = "Leader election — Raft-like election, term management, heartbeat, and role transitions for agent clusters"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lucineer/cuda-election"
readme = "README.md"
keywords = ["ai", "fleet", "agent", "rust"]
categories = ["science"]

[dependencies]
serde = { version = "1", features = ["derive"] }
